Sustituyendo las imagenes, las puse todas en remoto para no guardarlas en GitHub, ya que es mala practica

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,7 +43,7 @@ body{
     height: 50px;
     background-size: contain;
     background-repeat: no-repeat; 
-    background-image: url(../Imagenes/Icono.png) ;
+    background-image: url(https://i.postimg.cc/2j4R3DvT/Icono.png) ;
     position: relative;
     margin: 0 0 0 8%;
 }
