--- a/CSS/fotosDeGatos.css
+++ b/CSS/fotosDeGatos.css
@@ -1,6 +1,6 @@
 body{
     height: 100%;
-    background-image: url(../Imagenes/fondoFotosGatos4.jpg);
+    background-image: url(https://i.postimg.cc/qqHPQbf8/fondo-Fotos-Gatos4.jpg);
     background-attachment: scroll;
 
 }
