--- a/CSS/index.css
+++ b/CSS/index.css
@@ -12,7 +12,7 @@ body, html{
 .pantalla{
     height: 100%;
     width: 100%;
-    background-image: url(https://i.imgur.com/CjaYjeh.jpg);
+    background-image: url(https://i.postimg.cc/rwZ77FXy/gato-Fondo.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
@@ -39,7 +39,7 @@ header{
     width: 200px;
     height: 150px;
     font-size: 4rem;
-    background-image: url(https://i.imgur.com/rOe8mc4.png);
+    background-image: url(https://i.postimg.cc/Rh1jY792/adopta.png);
     background-size: contain;
     background-repeat: no-repeat;
 }
