--- a/CSS/curiosidades.css
+++ b/CSS/curiosidades.css
@@ -1,25 +1,36 @@
-.cajaPantalla{
-    padding: 50px 10% 5%;
-    height: 100%;
-    width: 100%;
-    position: relative;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-.contenedor{
-    display:inline-block;
-    position: relative;
-    margin: 5%;
-    width: 14%;
-    height: 50px;
-    border:2px solid green;
+main{
+    margin-top: 50px;
+    display: flex;
 }
-.cajaCuriosidad{
-    position: relative;
+.right-section{
+    display: flex;
+    border: 2px solid blue;
+    width: 100vw;
+    height: calc(100vh - 10vh - 50px);
+}
+.left-aside{
+    display:flex;
+    flex-flow:column;
+    align-items: center ;
+    justify-content: space-around;
+    padding: .2em;
+    width: 30vw;
+    height:calc(100vh - 10vh - 50px);
+    border: 2px solid green;
+}
+.left-aside__box{
+    width: 25vw;
+    height: 20vh;
+    display: flex;
+    border: 2px solid yellow;
+}
+footer{
+    width: 100vw - 2px;
+    height: 10vh;
     border: 2px solid red;
 }
-.curiosidadTexto{
-    position: absolute;
-    width: 100%;
-    height: 400%;
-    border: 2px solid blue;
-}
-/* Agregar Animacion y display oculto, agragar hover que baje el rectangulo con el texto de la curiosidad */
