--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,11 +12,18 @@
     --fuenteTexto:'Noto Sans JP', sans-serif;
 }
 html,body{
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     margin: 0;
     position: relative;
 }
+.link::after{
+    content: " |";
+    color: white;
+    font-size: 2rem;
+}
+
+
 header{
     background-color: var(--colorHeader);
     position: fixed;
